added sponsors section

--- a/styles/architect.css
+++ b/styles/architect.css
@@ -119,15 +119,29 @@ main{
     margin-top: 10px;
     margin-bottom: 10px;
 }
-
-
+/* sponsors styles */
+.sponsors{
+    text-align: center;
+}
+.sponsors-img-container{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
+}
+.sponsors-img-container img{
+    width: 165px;
+}
 /* responsive media quearis */
 /* mobile devices */
 @media screen and (max-width: 576px) {
     header{
         padding: 20px;
     }
-    nav, .teams-container{
+    nav,
+    .teams-container,
+    .sponsors-img-container{
         flex-direction: column;
     }
     .teams-img-container{
@@ -144,7 +158,9 @@ main{
     header{
         padding: 50px;
     }
-    nav{
+    nav,
+    .teams-container,
+    .sponsors-img-container{
         flex-direction: column;
 
     }
